<resources>
    <string name="app_name">Music Player</string>
    <string name="contacting_spotify">Contacting Spotify…</string>
    <string name="contactingSpotifyRetry">retry</string>
    <string name="contacting_spotify_error">Connection error</string>
    <string name="album">Album</string>
    <string name="title">Title</string>
    <string name="nothing_is_playing">Nothing is playing</string>
    <string name="album_art_for_now_playing_track">album art for now playing track</string>
    <string name="album_art_large">album art large</string>
    <string name="loading_player">Loading player…</string>
    <string name="searchable_hint">Search for an artist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
