<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nowPlayingBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="470dp"
    android:background="@drawable/hard_corner_dialog"
    app:behavior_peekHeight="68dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <FrameLayout
        android:id="@+id/nowPlayingTitleFrame"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toTopOf="@+id/nowPlayingAlbumArtLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/nowPlayingTitleBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/nowPlayingDragHandle"
                android:layout_width="80dp"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/now_playing_drag_handle"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/nowPlayingAlbumArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/album_art_for_now_playing_track"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/now_playing_album_art_placeholder" />

            <TextView
                android:id="@+id/nowPlayingAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:text="@string/album"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/nowPlayingTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp"
                tools:text="Album" />

            <TextView
                android:id="@+id/nowPlayingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/colorAccentDark"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nowPlayingAlbum"
                tools:text="Title" />

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nothing_is_playing"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nowPlayingAlbumArtLarge"
        tools:text="Nothing is playing" />

    <ImageView
        android:id="@+id/nowPlayingAlbumArtLarge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/round_corner_dialog"
        android:contentDescription="@string/album_art_large"
        android:cropToPadding="true"
        android:paddingTop="8dp"
        android:scaleType="matrix"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nowPlayingTitleFrame" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nowPlayingAlbumArtLarge">

        <View
            android:id="@+id/skipPrevTrackHotSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:focusable="false" />

        <View
            android:id="@+id/skipTrackHotSpot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:focusable="false" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
